# CARIB-CLEAR

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  RECRUITMENT_MESSAGE.md  WHITEPAPER.md  carib_clear.db  carib_clear.db-shm  carib_clear.db-wal  docker-compose.gpu.yml  docker-compose.yml  presentation-materials.md  pyproject.toml  start.sh  strategic-plan.md
jarvis/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  SETUP.md  jarvis_voice.py  pyproject.toml  run_api.sh  run_menu_bar.sh  run_telegram.sh  run_voice.py  run_voice.sh  tmp_capture_proof.py  tmp_conversation_proof.py
jarvis/.hermes/plans/: 2026-05-25_phase-0-to-7-roadmap.md
jarvis/data/: approvals.db  conversation_memory.db  events.db  events.jsonl  voice_log.db
jarvis/jarvis/: main.py
jarvis/jarvis/api/: __init__.py  app.py
jarvis/jarvis/events/: __init__.py  models.py  store.py
jarvis/jarvis/hermes_bridge/: client.py  retry_client.py
jarvis/jarvis/knowledge/: conversation_memory.py  drift_checker.py  drift_repairer.py  memory.py  self_doc.py
jarvis/jarvis/menu_bar/: __init__.py  app.py  status.py
jarvis/jarvis/notifications/: __init__.py  channels.py  events.py  scheduler.py  telegram_bot.py  telegram_handler.py
jarvis/jarvis/runtime/: __init__.py  approval_queue.py  (+5 more)
jarvis/piper_voices/: .voice_config.json
jarvis/scripts/: voice-stop.sh  voice-tail.sh  voice.sh
jarvis/tests/: test_api_e2e.py  test_approval_flow.py  test_conversation_memory.py  test_drift_repairer.py  test_events_store.py  test_hermes_client.py  test_llm_client.py  test_local_runner.py  test_main_flow.py  test_mcp_client.py  test_notifications.py  test_openrouter.py  test_openrouter2.py  test_policy_and_drift.py  test_retry_client.py  test_self_doc.py  test_telegram_bot.py  test_voice.py  test_voice_logger.py  test_voice_tavily.py  test_wake_word.py
(+146 files in other folders)
