[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-core"
version = "0.1.0"
description = "JARVIS architecture A MVP scaffold"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
